# babystepstimer

./: .gitignore  .gitmodules  README.md  build.gradle
CSharp/: BabyStepTimer.sln  readme.txt
CSharp/BabyStepTimer/: BabyStepTimer.csproj  Program.cs
CSharp/BabyStepTimer.Tests/: BabyStepTimer.Tests.csproj  SampleTests.cs  UITester.cs
CSharp/BabyStepTimer.Tests/Properties/: AssemblyInfo.cs
CSharp/BabyStepTimer/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx
Cpp/: .gitignore  CMakeLists.txt  Hints.md  README.md
Cpp/src/: BabyStepTimer.cpp  BabystepsTimer.cpp  BabystepsTimer.h  main.cpp
Java/: build.gradle
Java/gradle/wrapper/: gradle-wrapper.properties
Java/src/main/java/net/davidtanzer/babysteps/: BabyStepsTimerUI.java  BabystepsTimer.java  BackgroundDriver.java  Clock.java  Configuration.java  Progress.java  ProgressLogic.java  SoundPlayer.java  SystemWallClock.java  (+4 more)
ObjC-iOS/BabyStepsTimer/: ViewController.m
ObjC-iOS/BabyStepsTimer.xcodeproj/: project.pbxproj
ObjC-iOS/BabyStepsTimer/Base.lproj/: Main.storyboard
Swift-iOS/BabyStepsTimer/: ViewController.swift
Swift-iOS/BabyStepsTimer.xcodeproj/: project.pbxproj
Swift-iOS/BabyStepsTimer/Base.lproj/: Main.storyboard
TypeScript/: babystep.html  mocha.opts  package-lock.json  package.json  tsconfig.json
TypeScript/babystep/: babystep.js  babystep.ts
TypeScript/spec/: babystep.spec.ts
TypeScript/src/: babystep.ts
src/main/java/net/davidtanzer/babysteps/: BabystepsTimer.java  DefaultTimerFactory.java  SwingTimerUserInterface.java  Timer.java  TimerDataListener.java  TimerEventListener.java  TimerFactory.java  TimerPresentationModel.java  TimerSoundsPlayer.java  TimerThread.java  TimerView.java  WallClock.java
src/test/java/net/davidtanzer/babysteps/: BabystepsTimerTest.java  TestingClock.java  TimerIntegrationTest.java  TimerPresentationModelTest.java  TimerTest.java
test/: example.args  example.command  example.out  example.sh
(+9 files in other folders)
